# AuthZ

./: .dockerignore  .eslintrc.cjs  .gitignore  ENHANCEMENT_SUMMARY.md  NEXT_STEPS.md  PHASE2_COMPLETION_SUMMARY.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vitest.config.ts  vitest.workspace.ts
.claude/: sparc-modes.json
.github/: cliff.toml
.swarm/: memory.db-shm  memory.db-wal
config/: go-server.env  rust-server.env
coordination/: PHASE5_BLOCKERS.md  PHASE5_COORDINATION_SUMMARY.md  PHASE5_DAILY_STANDUP.sh  PHASE5_WEEKLY_TEMPLATE.md
docker/: .dockerignore  Dockerfile  Dockerfile.go-core  container-structure-test.yaml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  init-db.sql
docs/: AGENTIC_AUTHZ_VISION.md  CERBOS-FEATURE-COVERAGE-MATRIX.md  EXPORTED-VARIABLES-USAGE.md  GO-VECTOR-STORE-ARCHITECTURE.md  GO-VECTOR-STORE-DEVELOPMENT-PLAN.md  IMPLEMENTATION-STATUS.md  IMPLEMENTATION_REPORT.md  INDEX.md  MCP-A2A-RESEARCH-TASKS.md  OPTION2_CORRECTED_SUMMARY.md  OPTION2_INTEGRATION_TESTING_SUMMARY.md  PERFORMANCE_BENCHMARKS.md  PERFORMANCE_VALIDATION_SUMMARY.md  PHASE-5-IMPLEMENTATION-SUMMARY.md  PHASE1-IMPLEMENTATION-PLAN.md  PHASE2_COMPLETE_VALIDATION.md  PHASE2_VALIDATION_REPORT.md  README.md  RUST_MIGRATION_COMPLETE.md  SDD-ENTERPRISE-AUTHZ-ENGINE.md  TECHNICAL-SCOPE-COMPARISON.md  TECHNOLOGY-DECISION-MATRIX.md  infrastructure-status.md
go-core/: .env.example  CACHE_IMPLEMENTATION.md  CACHE_QUICK_START.md  CODE_SNIPPETS.md  Dockerfile  Makefile  POLICY_HOT_RELOAD.md  README.md  README_REDIS_CACHE.md  REDIS_CACHE_SUMMARY.txt  auth_coverage.out  coverage.out  docker-compose.yml  go.mod  go.sum
go-core/src/authz/: Cargo.toml
go-core/src/authz/benches/: phase2_benchmarks.rs  scope_benchmarks.rs
go-core/src/authz/migrations/: README.md
go-core/src/authz/src/: error.rs  lib.rs  types.rs
go-core/src/authz/src/derived_roles/: graph.rs  mod.rs  pattern.rs  resolver.rs  tests.rs  types.rs
go-core/src/authz/src/graph/: mod.rs  tests.rs
go-core/src/authz/src/scope/: mod.rs  resolver.rs  tests.rs  types.rs
go-core/src/authz/tests/: derived_roles_integration.rs  mod.rs  scope_resolver_integration.rs  vector_search_integration.rs
memory/: claude-flow@alpha-data.json
rust-core/: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo 2.toml  Cargo.toml  Cargo.toml.bench  Cargo.toml.benchmarks  Dockerfile  Dockerfile 2  Dockerfile 2.mcp  Dockerfile.api  Dockerfile.quic  GETTING_STARTED.md  GITHUB_SETUP_GUIDE 2.md  LICENSE-APACHE  LICENSE-MIT  PHASE5_BENCHMARK_DELIVERABLE.md  QUICKSTART_DOCKER.md  QUICKSTART_K8S.md  README.md  SECURITY 2.md  STATUS.md  docker-compose 2.yml  docker-compose.dashboard.yml  docker-compose.demo.yml  package.json  (+2 more)
rust-core/src/api/: Cargo.toml  README.md
rust-core/src/api-server/: Cargo.toml
rust-core/src/api-server/src/: error.rs  handlers.rs  lib.rs  main.rs  middleware.rs  models.rs  routes.rs  server.rs  state.rs
rust-core/src/api/src/: config.rs  error.rs  lib.rs  models.rs  routes.rs
rust-core/src/api/src/handlers/: crypto.rs  dag.rs  health.rs  mod.rs  vault.rs
rust-core/src/api/tests/: crypto_test.rs  dag_test.rs  health_test.rs  integration_test.rs  integration_tests.rs  mod.rs  vault_test.rs
rust-core/src/consensus/: Cargo.toml  README.md
rust-core/src/consensus/benches/: circuit_breaker_bench.rs  consensus_bench.rs  parallel_validation_bench.rs  recovery_bench.rs
rust-core/src/consensus/examples/: parallel_demo.rs
rust-core/src/consensus/src/: adaptive_quorum.rs  adaptive_timeout.rs  bft.rs  bft_reputation_integration.rs  byzantine_detection.rs  circuit_breaker.rs  degraded_mode.rs  error.rs  failure_detector.rs  fallback.rs  fork_detector.rs  fork_reconciliation.rs  lib.rs  message.rs  metrics.rs  multi_signature.rs  peer_recovery.rs  recovery_integration.rs  state.rs  state_sync.rs  view_change.rs  weighted_voting.rs
rust-core/src/consensus/tests/: bft_tests.rs  circuit_breaker_tests.rs  parallel_validation_tests.rs  recovery_tests.rs  reputation_integration_tests.rs
rust-core/src/crypto/: Cargo.toml
rust-core/src/crypto/benches/: batch_verify_bench.rs  crypto_bench.rs  simd_hash_bench.rs  simd_intrinsics_bench.rs
rust-core/src/crypto/src/: batch_verify.rs  error.rs  lib.rs  simd_hash.rs  simd_intrinsics.rs
rust-core/src/crypto/src/hash/: blake3.rs  mod.rs  sha3.rs
rust-core/src/crypto/src/hybrid/: encryption.rs  mod.rs  signatures.rs
rust-core/src/crypto/src/kem/: kyber.rs  mod.rs
rust-core/src/crypto/src/keys/: generation.rs  mod.rs  rotation.rs  storage.rs
rust-core/src/crypto/src/signatures/: dilithium.rs  mod.rs  sphincs.rs
rust-core/src/crypto/tests/: README.md  batch_verify_tests.rs  mod.rs  simd_hash_tests.rs  simd_intrinsics_tests.rs
rust-core/src/crypto/tests/integration/: full_workflow_tests.rs  mod.rs
rust-core/src/crypto/tests/mocks/: mod.rs
rust-core/src/crypto/tests/unit/: error_tests.rs  hash_tests.rs  hybrid_crypto_tests.rs  kem_tests.rs  key_management_tests.rs  mod.rs  signature_tests.rs
rust-core/src/dag/: Cargo.toml
rust-core/src/dag/benches/: dag_bench.rs
rust-core/src/dag/src/: consensus.rs  error.rs  graph.rs  lib.rs  ordering.rs  pruning.rs  vertex.rs
rust-core/src/dag/src/storage/: backup.rs  legacy.rs  metrics.rs  mod.rs  rocksdb.rs
rust-core/src/dag/tests/: storage_tests.rs
rust-core/src/node/: Cargo.toml  DESIGN.md
rust-core/src/node/src/: config.rs  lib.rs  main.rs  node.rs
rust-core/src/reputation/: Cargo.toml
rust-core/src/reputation/docs/: METRICS.md
rust-core/src/reputation/examples/: metrics_integration.rs
rust-core/src/reputation/src/: error.rs  lib.rs  metrics.rs  reputation_tracker.rs  reward_distributor.rs  stake_manager.rs  types.rs
rust-core/src/reputation/tests/: metrics_integration_test.rs
rust-core/tests/e2e/: Cargo.toml  DELIVERABLES.md  README.md  TEST_REPORT.md  phase7_integration_tests.rs
rust-core/tests/e2e/benches/: throughput_benchmark.rs
rust-core/tests/e2e/tests/: byzantine_node.rs  cluster_consensus.rs  crash_recovery.rs  network_partition.rs
(+1079 files in other folders)
