[package]
name = "authz"
version = "0.1.0"
edition = "2021"
authors = ["Authorization Engine Team"]
description = "Production-ready authorization engine with derived roles support"

[dependencies]
# Core async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CEL expression evaluation
cel-interpreter = "0.8"
cel-parser = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Collections and utilities
indexmap = "2.1"
dashmap = "6.1"

# Pattern matching
regex = "1.11"
wildmatch = "2.3"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
test-case = "3.3"

[[bench]]
name = "scope_benchmarks"
harness = false
