[package]
name = "cretoai-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cretoai-api-server"
path = "src/bin/server.rs"

[dependencies]
# Internal dependencies
cretoai-core = { path = "../core" }
cretoai-crypto = { path = "../crypto" }
cretoai-dag = { path = "../dag" }
cretoai-network = { path = "../network" }
cretoai-vault = { path = "../vault" }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# OpenAPI/Swagger
utoipa = { version = "4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# Utilities
base64 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Crypto for AES-GCM encryption
aes-gcm = "0.10"
sha3 = { workspace = true }
rand = { workspace = true }
blake3 = { workspace = true }
once_cell = "1.20"

[dev-dependencies]
tokio-test = { workspace = true }
reqwest = "0.11"
criterion = { workspace = true }
futures = "0.3"
urlencoding = "2.1"
tower = "0.5"  # For ServiceExt in tests
http-body-util = "0.1"  # For body operations

[features]
default = []
