[package]
name = "cretoai-node"
version = "0.6.0"
edition = "2021"
authors = ["Creto Systems - CretoAI Team"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "cretoai-node"
path = "src/main.rs"

[dependencies]
# Internal dependencies
cretoai-consensus = { path = "../consensus" }
cretoai-dag = { path = "../dag" }
cretoai-network = { path = "../network" }
cretoai-crypto = { path = "../crypto" }
cretoai-api = { path = "../api" }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

# Logging & metrics
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Web server (metrics)
warp = "0.3"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3.8"
