[package]
name = "cretoai-reputation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }

# Reputation-specific dependencies
dashmap = "5.5"
parking_lot = "0.12"
rocksdb = { workspace = true }

# Metrics
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"

# Internal dependencies
cretoai-core = { path = "../core" }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
