[package]
name = "cretoai-e2e-tests"
version = "0.6.0"
edition = "2021"
publish = false

[dependencies]
# Internal dependencies
cretoai-consensus = { path = "../../src/consensus" }
cretoai-network = { path = "../../src/network" }
cretoai-dag = { path = "../../src/dag" }
cretoai-crypto = { path = "../../src/crypto" }
cretoai-core = { path = "../../src/core" }

# Async runtime
tokio = { version = "1.35", features = ["full", "test-util", "time", "sync", "rt-multi-thread"] }
tokio-test = "0.4"
tokio-util = "0.7"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Testing utilities
tempfile = "3.8"
tracing-test = "0.2"
serial_test = "3.0"
proptest = "1.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = "0.4"
rand = "0.8"
anyhow = "1.0"
thiserror = "1.0"

# Database (for testing RocksDB) - match workspace version
rocksdb = { workspace = true }

# Networking
quinn = "0.11"
rustls = "0.22"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "throughput_benchmark"
harness = false
path = "benches/throughput_benchmark.rs"
